# testovoe_ai_python

./: .env.example  .gitignore  README.md  config.py  main.py  noise_suppress.py  pyproject.toml
base_prompts/: brief.yaml  default.yaml  detailed.yaml  legal.yaml  scientific.yaml  technical.yaml
src/: dependencies.py
src/core/: document_collector.py  document_service.py  folder_scanner.py  logger.py  main_app.py  prompt_manager.py  summary_generator.py
src/domain/: exceptions.py  models.py
src/llm/: contracts.py  openrouter.py
src/output/: __init__.py  formatter.py  progress.py  tables.py
src/prompts/: __init__.py  contracts.py  registry.py
src/readers/: audio_vide_reader.py  contracts.py  factory.py  image_reader.py  pdf_reader.py  txt_reader.py
src/skills/: base.py  registry.py
src/skills/.config/happy_smile/: folder_analysis.yaml
tests/: test_container.py  test_core.py  test_llm.py  test_logger.py  test_readers.py  test_registries.py
